# xl_contrastive_learning

./: .gitignore  README.md
contrastive_training/: README.md  accelerate_config.txt  accelerate_config_1gpu.yaml  accelerate_config_4gpu.yaml  accelerate_config_fsdp1.txt  contrastive_trainer.py  modeling.py  parallel_dataset.py  pyproject.toml  train.py  training_configs.json  xlcl_requirements.txt
language_evals/: README.md  eval_requirements.txt  evaluate.py  language_to_task.py  multiloko_utils.py  pyproject.toml  run_eval.py  run_eval_only.sh  run_sft_and_eval.sh  sft.py  task_evaluators.py  vllm_phimoe_patch.py
language_evals/results/eval-Ling-mini-2.0-ar/: summary.json
language_evals/results/eval-Ling-mini-2.0-bn/: summary.json
language_evals/results/eval-Ling-mini-2.0-en/: summary.json
language_evals/results/eval-Phi-tiny-MoE-instruct-ar/: summary.json
language_evals/results/eval-Phi-tiny-MoE-instruct-bn/: summary.json
language_evals/results/eval-Phi-tiny-MoE-instruct-en/: summary.json
language_evals/results/eval-Phi-tiny-MoE-instruct-si/: summary.json
language_evals/results/eval-Qwen3.5-35B-A3B-si/: summary.json
language_evals/task_utils/: flores.yaml  global_mgsm.yaml  gmmlu_medical_samples_dict.json
routing_analysis/: README.md  analysis_helpers.py  expert_importance_eda.ipynb  get_routing_weights.py  lucas_requirements.txt  models.py  utils.py
