[project]
name = "language-evals"
version = "0.1.0"
description = "XL Contrastive Learning Evaluation"
requires-python = "==3.12.*"
dependencies = [
    "transformers>=4.44.0,<4.49.0",
    "torch",
    "torchvision",
    "vllm>=0.6.0",
    "lm-eval>=0.4.11",
    "peft>=0.19.1",
    "datasets<3.0.0",
]

